--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -1,1 +1,16 @@
-<p>calculadora works!</p>
+<div class="container">
+    <div class="row">
+      <div class="col">
+        <h1>Aplicación de calculadora</h1>
+        <label>Operando A</label>
+        <input class="form-control" placeholder="Escribe el operando A" type="number" [(ngModel)]='operandoA'/>
+        <br />
+        <label>Operando B</label>
+        <input class="form-control" placeholder="Escribe el operando B" type="number" [(ngModel)]='operandoB'/>
+        <br />
+        <button class="btn btn-primary" (click)="sumar()">Sumar</button>
+        <br />
+        <label>Resultado:&nbsp;{{suma}}</label>
+      </div>
+    </div>
+  </div>
